adjust selectors to use dark mode properties correct

--- a/src/components/RadioButton/radiobutton.scss
+++ b/src/components/RadioButton/radiobutton.scss
@@ -31,6 +31,8 @@
             @media (prefers-color-scheme: dark) {
                 filter: invert(1);
             }
+
+            html:has(.#{$eccgui}-application__container.#{$eccgui}-palette--dark) :not(.#{$eccgui}-palette--light) &,
             .#{$eccgui}-palette--dark :not(.#{$eccgui}-palette--light) & {
                 filter: invert(1);
             }
